--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>FaSHioNku ⋆. 𐙚 ̊</title>
+    <title>FaSHioN ⋆. 𐙚 ̊</title>
     <style>
         .bg-primary { background-color: #800000; }
         .bg-secondary { background-color: #EFECEB; }
