--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <div class="flex items-center flex-shrink-0 ml-4 lg:ml-0">
                             <a href="#" title="" class="inline-flex rounded focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-900">
                                 <span class="sr-only"> Rareblocks logo </span>
-                                <img class="w-auto h-8" src="https://cdn.rareblocks.xyz/collection/clarity-ecommerce/images/logo.svg" alt="" />
+                                <img class="w-auto h-8" src="foto/LOGO.png" alt="" />
                             </a>
                         </div>
 
